--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,26 @@
             <artifactId>kafka-clients</artifactId>
             <version>2.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.28</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>hbc-core</artifactId>            <!-- or hbc-twitter4j -->
+            <version>2.2.0</version>            <!-- or whatever the latest version is -->
+        </dependency>
+
     </dependencies>
+
 
     <properties>
         <project.build.sourceEnccoding>UTF-8</project.build.sourceEnccoding>
-        <java.main.class>Main</java.main.class>
+        <java.main.class>TwitterAPI</java.main.class>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -35,7 +45,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>TwitterAPI</mainClass>
                 </configuration>
             </plugin>
         </plugins>
