--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,16 @@
             <artifactId>kafka-clients</artifactId>
             <version>2.0.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.28</version>
         </dependency>
-
-
         <dependency>
             <groupId>com.twitter</groupId>
-            <artifactId>hbc-core</artifactId>            <!-- or hbc-twitter4j -->
-            <version>2.2.0</version>            <!-- or whatever the latest version is -->
+            <artifactId>hbc-core</artifactId>
+            <version>2.2.0</version>
         </dependency>
-
     </dependencies>
 
 
